--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ django-filter==21.1
 django-storages==1.13.1
 django-tables2==2.4.1
 djangorestframework==3.12.4
-pandas==1.3.5
-waitress==2.1.1
-virtualenv==20.0.17
+#pandas==1.3.5
+#waitress==2.1.1
+#virtualenv==20.0.17
