--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,17 @@ cython_debug/
 fs_media/
 
 core/__pycache__/*.pyc
+core/__pycache__/__init__.cpython-37.pyc
+core/__pycache__/admin.cpython-37.pyc
+core/__pycache__/apps.cpython-37.pyc
+core/__pycache__/models.cpython-37.pyc
+core/__pycache__/urls.cpython-37.pyc
+core/__pycache__/views.cpython-37.pyc
+core/migrations/__pycache__/__init__.cpython-37.pyc
+core/migrations/__pycache__/0001_initial.cpython-37.pyc
+core/migrations/__pycache__/0002_trans.cpython-37.pyc
+core/migrations/__pycache__/0003_image_udt.cpython-37.pyc
+mysite/__pycache__/__init__.cpython-37.pyc
+mysite/__pycache__/settings.cpython-37.pyc
+mysite/__pycache__/urls.cpython-37.pyc
+mysite/__pycache__/wsgi.cpython-37.pyc
