사이드 등록 완료

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ venv.bak/
 cython_debug/
 
 fs_media/
+fs_media/*
+logs/
 
 core/__pycache__/*.pyc
 core/__pycache__/__init__.cpython-37.pyc
@@ -51,3 +53,9 @@ mysite/__pycache__/__init__.cpython-37.pyc
 mysite/__pycache__/settings.cpython-37.pyc
 mysite/__pycache__/urls.cpython-37.pyc
 mysite/__pycache__/wsgi.cpython-37.pyc
+core/__pycache__/admin.cpython-37.pyc
+core/__pycache__/models.cpython-37.pyc
+core/__pycache__/urls.cpython-37.pyc
+core/__pycache__/views.cpython-37.pyc
+mysite/__pycache__/settings.cpython-37.pyc
+mysite/__pycache__/urls.cpython-37.pyc
